unpackaged/main/default/objects/OrderApi__Batch__c/OrderApi__Batch__c.object-meta.xml
<CustomObject>
    <description>Batch receipts to improve and faciliate bank reconcilation.</description>
    <label>Batch</label>
    <nameField>
        <label>Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>