unpackaged/main/default/objects/OrderApi__Batch__c/fields/OrderApi__Actual_Amount__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Actual_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>**System Calculated** The sum (amount) of entries entered for the batch.</description>
    <inlineHelpText>**System Calculated** The sum (amount) of entries entered for the batch.</inlineHelpText>
    <label>Actual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>