unpackaged/main/default/objects/OrderApi__Batch__c/fields/OrderApi__Actual_Count__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Actual_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>**System Calculated** The current number of entries entered for the batch.</description>
    <inlineHelpText>**System Calculated** The current number of entries entered for the batch.</inlineHelpText>
    <label>Actual Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>