unpackaged/main/default/objects/OrderApi__Batch__c/fields/OrderApi__Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Batch_Number__c</fullName>
    <description>**Auto Calculated** Auto incrementing number. (External Id)</description>
    <displayFormat>{0000000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>**Auto Calculated** Auto incrementing number. (External Id)</inlineHelpText>
    <label>Batch Number</label>
    <type>AutoNumber</type>
</CustomField>