unpackaged/main/default/objects/OrderApi__Batch__c/fields/OrderApi__Business_Group__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Business_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override/Required** Link to the related Business Group from the Batch inherited from the current user&#39;s assigned Business Group if not defined on record creation.</description>
    <inlineHelpText>**System Calculated/Override/Required** Link to the related Business Group from the Batch inherited from the current user&#39;s assigned Business Group if not defined on record creation.</inlineHelpText>
    <label>Business Group</label>
    <referenceTo>OrderApi__Business_Group__c</referenceTo>
    <relationshipLabel>Batches</relationshipLabel>
    <relationshipName>Batches</relationshipName>
    <type>Lookup</type>
</CustomField>