unpackaged/main/default/objects/OrderApi__Batch__c/fields/OrderApi__Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Closed_Date__c</fullName>
    <description>The date the Batch was closed and assessed as Ready to Post.</description>
    <inlineHelpText>The date the Batch was closed and assessed as Ready to Post.</inlineHelpText>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>