unpackaged/main/default/objects/OrderApi__Batch__c/fields/OrderApi__Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Date__c</fullName>
    <description>The date to use as the default Date for related Receipts.</description>
    <inlineHelpText>The date to use as the default Date for related Receipts.</inlineHelpText>
    <label>Default Date</label>
    <type>Date</type>
</CustomField>