unpackaged/main/default/objects/OrderApi__Batch__c/fields/OrderApi__Deposit_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Deposit_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override/Required** The GL account related to the deposit account (bank) for the batch.</description>
    <inlineHelpText>**System Calculated/Override/Required** The GL account related to the deposit account (bank) for the batch.</inlineHelpText>
    <label>Deposit Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Batches</relationshipLabel>
    <relationshipName>Batches</relationshipName>
    <type>Lookup</type>
</CustomField>