unpackaged/main/default/objects/OrderApi__Batch__c/fields/OrderApi__Entity__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Entity__c</fullName>
    <description>Select a default Entity for related Receipts to the Batch.</description>
    <inlineHelpText>Select a default Entity for related Receipts to the Batch.</inlineHelpText>
    <label>Default Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>