unpackaged/main/default/objects/OrderApi__Batch__c/fields/OrderApi__Expected_Amount__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Expected_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>**Required** The expected sum (amount) of entries for the batch.</description>
    <inlineHelpText>**Required** The expected sum (amount) of entries for the batch.</inlineHelpText>
    <label>Expected Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>