unpackaged/main/default/objects/OrderApi__Batch__c/fields/OrderApi__Expected_Count__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Expected_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>**Required** The expected number of entries for the batch.</description>
    <inlineHelpText>**Required** The expected number of entries for the batch.</inlineHelpText>
    <label>Expected Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>