unpackaged/main/default/objects/OrderApi__Batch__c/fields/OrderApi__Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the batch is considered closed and the system will restrict users (without special permissions assigned to their profile) from editing the batch or entries associated with the batch.</description>
    <inlineHelpText>When checked the batch is considered closed and the system will restrict users (without special permissions assigned to their profile) from editing the batch or entries associated with the batch.</inlineHelpText>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>