unpackaged/main/default/objects/OrderApi__Batch__c/fields/OrderApi__Is_Posted__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, related receipts are posted to Transactions.</description>
    <inlineHelpText>When checked, related receipts are posted to Transactions.</inlineHelpText>
    <label>Is Posted</label>
    <type>Checkbox</type>
</CustomField>