unpackaged/main/default/objects/OrderApi__Batch__c/fields/OrderApi__Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Item to use as &quot;Default&quot; for related Batch Receipts. (Available in Batch UI only)</description>
    <inlineHelpText>Link to related Item to use as &quot;Default&quot; for related Batch Receipts. (Available in Batch UI only)</inlineHelpText>
    <label>Default Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Batches</relationshipLabel>
    <relationshipName>Batches</relationshipName>
    <type>Lookup</type>
</CustomField>