unpackaged/main/default/objects/OrderApi__Batch__c/fields/OrderApi__Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Opened_Date__c</fullName>
    <description>The date the Batch was opened.</description>
    <inlineHelpText>The date the Batch was opened.</inlineHelpText>
    <label>Opened Date</label>
    <type>Date</type>
</CustomField>