unpackaged/main/default/objects/OrderApi__Batch__c/fields/OrderApi__Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the Payment Gateway assigned to the Batch (for online transactions and offline entry of transactions)</description>
    <inlineHelpText>Link to the Payment Gateway assigned to the Batch (for online transactions and offline entry of transactions)</inlineHelpText>
    <label>Payment Gateway</label>
    <referenceTo>OrderApi__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Batches</relationshipLabel>
    <relationshipName>Batches</relationshipName>
    <type>Lookup</type>
</CustomField>