unpackaged/main/default/objects/OrderApi__Batch__c/fields/OrderApi__Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Payment_Type__c</fullName>
    <description>Select the Payment Type for the Batch.</description>
    <inlineHelpText>Select the Payment Type for the Batch.</inlineHelpText>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>EFT</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>