unpackaged/main/default/objects/OrderApi__Batch__c/fields/OrderApi__Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Posted_Date__c</fullName>
    <description>The date the Batch was posted.</description>
    <inlineHelpText>The date the Batch was posted.</inlineHelpText>
    <label>Posted Date</label>
    <type>Date</type>
</CustomField>