unpackaged/main/default/objects/OrderApi__Batch__c/fields/OrderApi__Source_Code__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Source_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source Code to set by default on cash entries created from the Batch.</description>
    <inlineHelpText>Source Code to set by default on cash entries created from the Batch.</inlineHelpText>
    <label>Source Code</label>
    <referenceTo>OrderApi__Source_Code__c</referenceTo>
    <relationshipLabel>Batches</relationshipLabel>
    <relationshipName>Batches</relationshipName>
    <type>Lookup</type>
</CustomField>