unpackaged/main/default/objects/OrderApi__Batch__c/listViews/OrderApi__All.listView-meta.xml
<ListView>
    <fullName>OrderApi__All</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Batch_Number__c</columns>
    <columns>OrderApi__Deposit_Account__c</columns>
    <columns>OrderApi__Business_Group__c</columns>
    <columns>OrderApi__Source_Code__c</columns>
    <columns>OrderApi__Actual_Count__c</columns>
    <columns>OrderApi__Actual_Amount__c</columns>
    <columns>OrderApi__Expected_Count__c</columns>
    <columns>OrderApi__Expected_Amount__c</columns>
    <columns>OrderApi__Is_Closed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>